[workspace]
members = ["packages/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
homepage = "https://github.com/simon-bourne/arpy"
repository = "https://github.com/simon-bourne/arpy"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
