[package]
name = "arpy-example-actix"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
actix-web = "4.3.0"
arpy-actix = { path = "../../packages/actix" }
arpy-server = { path = "../../packages/server" }
arpy-example-common = { path = "../common" }
env_logger = "0.10.0"
