[package]
name = "arpy-example-actix"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
actix-web = { workspace = true }
arpy-actix = { workspace = true }
arpy-server = { workspace = true }
arpy-example-common = { workspace = true }
env_logger = { workspace = true }
