[package]
name = "rpc-example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rpc = { path = "../../packages/rpc" }
rpc-axum = { path = "../../packages/axum" }
rpc-example-rpc = { path = "../rpc" }
axum = { version = "0.6.3", features = ["ws", "headers"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
