[package]
name = "arpy-example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arpy = { path = "../../packages/arpy" }
arpy-server = { path = "../../packages/server" }
arpy-axum = { path = "../../packages/axum" }
arpy-example-common = { path = "../common" }
axum = { version = "0.6.3", features = ["ws", "headers"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
