[package]
name = "arpy-example-axum"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
axum = { workspace = true, features = ["ws", "headers"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }

arpy = { workspace = true }
arpy-server = { workspace = true }
arpy-axum = { workspace = true }
arpy-example-common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
