[package]
name = "arpy-example-reqwasm"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
arpy = { path = "../../packages/arpy" }
arpy-reqwasm = { path = "../../packages/reqwasm" }
arpy-example-common = { path = "../common" }
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.34"
anyhow = "1.0.69"
futures = "0.3.26"
console_error_panic_hook = "0.1.7"
