[package]
name = "arpy-example-reqwasm"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
arpy = { workspace = true }
arpy-reqwasm = { workspace = true }
arpy-example-common = { workspace = true }
gloo-console = { workspace = true }
wasm-bindgen-futures = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
console_error_panic_hook = { workspace = true }
