[package]
name = "arpy-example-reqwest"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
arpy = { workspace = true }
arpy-reqwest = { workspace = true }
arpy-example-common = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
